# petri-dish-of-madness

./: .dockerignore  .env.example  .gitignore  .venv  ACKNOWLEDGMENTS.md  ARCHITECTURE.md  ASSET_LICENSES.md  BUILD-PLAN.md  BUILD_RESULTS.md  BUILD_RESULTS_3D.md  BUILD_RESULTS_W10.md  BUILD_RESULTS_W11A.md  BUILD_RESULTS_W11B.md  BUILD_RESULTS_W9.md  BUILD_RESULTS_WAVEA.md  BUILD_RESULTS_WAVE_K.md  CLAUDE-DESIGN-PROMPT.md  CLAUDE.md  Makefile  README.md  START-HERE.md  dev  docker-compose.yml  node_modules
backend/: README.md  pyproject.toml
backend/emergence/: __init__.py  run.py
backend/petridish/: __init__.py  run.py
backend/scripts/: em297_probe.py  em297_recipe_schema.py
backend/tests/: conftest.py  test_ab_variants.py  test_action_schema_fold.py  test_adaptive_lane_routing.py  test_adaptive_softpin_reconcile.py  test_agent_count_padding.py  test_api_labsetup.py  test_api_routes.py  test_arg_normalization.py  test_auto_breaker.py  test_build_road.py  test_cache_wiring.py  test_cap_governor.py  test_capability.py  test_chronicle.py  test_city25_roster.py  test_city_seed.py  test_city_templates.py  test_citygraph.py  test_citygraph_zones.py  test_comm_feed_volume.py  test_comm_param_parsing.py  test_em123_districts.py  test_em126_generations.py  test_em167_ollama_overflow.py  test_em183_town_center.py  test_em186_run_d3_wiring.py  test_em189_deterministic_child_ids.py  test_em190_outbox_snapshot.py  test_em203_206_settled_signal.py  test_em222_infra.py  test_em222_integration.py  test_em222_live.py  test_em222_retrieval.py  test_em223_planning.py  (+158 more)
(+622 files in other folders)
