[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emergence"
version = "0.1.0"
description = "EmergenceMadness backend – multi-agent chaos simulation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jsonschema>=4.22",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["emergence*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
